# pub-dialogue

./: .env.example  .gitignore  00_data_quality.ipynb  01_processing.ipynb  01a_clustering.ipynb  02_shared_structure.ipynb  03_ai_distinctiveness.ipynb  04_temporal_dynamics.ipynb  05_robustness.ipynb  README.md  dialogue_utils.py  notebook_cell_mapping.json  prompt_sensitivity_v16.ipynb  pub-dialogue-analysis.tex  pub-dialogue.code-workspace  public_dialogue_analyser_v12b_4.ipynb  public_dialogue_analyser_v19.ipynb  pyproject.toml  requirements.txt  validation_playbook.md
backlog/bugs/: 2026-05-07_fix-crosscutting-entropy-threshold.md  2026-05-07_fix-sensitivity-call-sites-and-outputs.md  2026-05-07_fix-tech-word-boundary-matching.md  (+3 more)
cip/: cip0001.md  cip0002.md  cip0003.md  cip0004.md  cip0005.md  cip0006.md  cip0007.md  cip0008.md  cip0009.md  cip000A.md  cip000B.md  cip000C.md  cip000D.md  cip000E.md  cip000F.md  cip0010.md  cip0011.md  cip0012.md
fynesse/: access.py  address.py  assess.py  config.py  defaults.yml
pub_dialogue/: __init__.py  access.py  address.py  assess.py  client.py  utils.py
requirements/: req0001_extraction-yield-diagnostics.md  req0002_sensitivity-correctness.md  req0003_code-auditability.md  req0004_artefact-reduction.md  req0005_results-validation.md  req0006_question-agnostic-assessment.md
scripts/: add_notebook_descriptions.py  refactor_notebook.py  resplit_01.py  retry_failed_extractions.py  split_notebook.py
tests/: conftest.py  test_access.py  test_address.py  test_assess.py  test_dialogue_utils.py
(+61 files in other folders)
