[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pub-dialogue"
version = "0.1.0"
description = "Public Dialogue Analyser — shared utilities and analysis pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy<2",
    "pandas>=2.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "PyMuPDF>=1.23",
    "openai>=1.10",
    "litellm>=1.40",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.18",
    "tqdm>=4.66",
    "openpyxl>=3.1",
    "ipykernel>=6.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "python-dotenv>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["pub_dialogue"]

[tool.pytest.ini_options]
testpaths = ["tests"]
